<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/currentback"
    tools:context=".frontend.SettingsActivity">

    <Button
        android:id="@+id/accuracy_button"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:background="@color/colorButton"
        android:text="@string/accuracy_level_button"
        android:textColor="@color/colorText"
        app:layout_constraintBottom_toTopOf="@+id/mapLocationsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/satViewCheckBox" />

    <Button
        android:id="@+id/mapLocationsButton"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="32dp"
        android:background="@color/colorButton"
        android:onClick="mapLocations"
        android:text="@string/map_location_button"
        android:textColor="@color/colorText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accuracy_button" />

    <CheckBox
        android:id="@+id/satViewCheckBox"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="@color/colorButton"
        android:fontFamily="sans-serif-medium"
        android:text="@string/satellite_view_button"
        android:textColor="@color/colorText"
        app:layout_constraintBottom_toTopOf="@+id/accuracy_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/downloadCheckBox" />

    <CheckBox
        android:id="@+id/downloadCheckBox"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="@color/colorButton"
        android:fontFamily="sans-serif-medium"
        android:text="@string/download_the_map_button"
        android:textColor="@color/colorText"
        app:layout_constraintBottom_toTopOf="@+id/satViewCheckBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.22000003" />
</androidx.constraintlayout.widget.ConstraintLayout>